create the login and register page

--- a/src/views/auth/register.ejs
+++ b/src/views/auth/register.ejs
@@ -178,7 +178,7 @@
     <div class="text-center mt-6 text-gray">
       Vous avez déjà un compte?
       <a
-        href="login.html"
+        href="login"
         class="text-primary-green font-medium hover:underline"
         >Connectez-vous</a
       >
